--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "chartjs-plugin-datalabels": "^2.2.0",
     "dotenv": "^16.5.0",
     "framer-motion": "^12.16.0",
+    "html5-qrcode": "^2.3.8",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
     "jwt-decode": "^4.0.0",
@@ -37,6 +38,7 @@
     "react-icons": "^5.5.0",
     "react-pdf": "^9.2.1",
     "react-qr-code": "^2.0.15",
+    "react-qr-reader": "^3.0.0-beta-1",
     "react-responsive": "^10.0.1",
     "react-router-dom": "^7.6.2",
     "react-select": "^5.10.1",
