--- a/server/package.json
+++ b/server/package.json
@@ -18,7 +18,9 @@
     "bcryptjs": "^3.0.2",
     "cloudinary": "^2.6.1",
     "cors": "^2.8.5",
+    "csv-parser": "^3.2.0",
     "dotenv": "^16.5.0",
+    "exceljs": "^4.4.0",
     "express": "^5.1.0",
     "express-fileupload": "^1.5.1",
     "firebase": "^11.9.0",
@@ -35,6 +37,7 @@
     "qrcode": "^1.5.4",
     "sanitize-filename": "^1.6.3",
     "socket.io": "^4.8.1",
+    "url": "^0.11.4",
     "validator": "^13.15.15",
     "xlsx": "^0.18.5"
   },
